# Finite-State-Machine

./: CMakeLists.txt  README.md  how_to_run.md  package.xml
include/: pick_place.fsm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/coord2b/share/coord2b/: package.sh  package.zsh
install/eddie-ros/include/eddie-ros/: interface.hpp
install/eddie-ros/lib/eddie-ros/: eddie_ros_interface  eddie_ros_interface_test
install/eddie-ros/share/eddie-ros/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/eddie_pmu_control/share/eddie_pmu_control/: package.ps1  package.sh  package.zsh
install/eddie_ros/include/eddie_ros/: interface.hpp
install/eddie_ros/lib/eddie_ros/: eddie_ros_interface_dummy  mock_servers_only
install/eddie_ros/share/eddie_ros/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/eddie_ros/share/eddie_ros/action/: ArmControl.idl  ArmControl.json  GripperControl.action  GripperControl.idl  GripperControl.json
install/eddie_ros/share/eddie_ros/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  eddie_rosConfig.cmake  eddie_ros__rosidl_typesupport_cExport.cmake  eddie_ros__rosidl_typesupport_cppExport.cmake  eddie_ros__rosidl_typesupport_introspection_cExport-noconfig.cmake  eddie_ros__rosidl_typesupport_introspection_cExport.cmake  export_eddie_ros__rosidl_generator_pyExport-noconfig.cmake  export_eddie_ros__rosidl_generator_pyExport.cmake  export_eddie_ros__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
install/eddie_ros/share/eddie_ros/urdf/: eddie.urdf
install/kinova_vision/lib/kinova_vision/: kinova_vision_node
install/kinova_vision/share/kinova_vision/: local_setup.sh  package.dsv  package.sh  package.zsh
install/orocos_kdl/include/kdl/: segment.hpp
install/orocos_kdl/share/orocos_kdl/: package.dsv  package.ps1  package.sh
install/pick_place_fsm/include/: pick_place_fsm.hpp
install/pick_place_fsm/lib/pick_place_fsm/: mock_servers_only
install/pick_place_fsm/share/pick_place_fsm/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pick_place_fsm/share/pick_place_fsm/cmake/: pick_place_fsmConfig.cmake
install/python_orocos_kdl/share/python_orocos_kdl/: package.bash  package.sh  package.zsh
install/robif2b/include/robif2b/functions/: kinova_gen3.h
install/robif2b/lib/cmake/robif2b/: robif2b-targets.cmake
install/robif2b/share/robif2b/: package.sh  package.zsh
log/: latest_build
src/: mock_servers_only.cpp  pick_place_fsm_mock.cpp
src/install/: local_setup.sh  setup.sh
src/install/coord2b/share/coord2b/: package.bash  package.dsv  package.ps1  package.sh
src/install/eddie-ros/share/eddie-ros/: package.bash  package.zsh
src/install/eddie_pmu_control/share/eddie_pmu_control/: package.bash  package.dsv  package.sh
src/install/eddie_ros/share/eddie_ros/: package.bash  package.zsh
src/install/kinova_vision/lib/kinova_vision/: kinova_vision_node
src/install/kinova_vision/share/kinova_vision/: package.bash  package.ps1  package.sh
src/install/orocos_kdl/include/kdl/: chainhdsolver_vereshchagin.hpp  chainhdsolver_vereshchagin_fext.hpp  joint.hpp
src/install/orocos_kdl/lib/: liborocos-kdl.so.1.5.2
src/install/orocos_kdl/share/orocos_kdl/: package.sh
src/install/python_orocos_kdl/share/python_orocos_kdl/: package.dsv  package.ps1  package.sh
src/install/robif2b/include/robif2b/types/: eddie_power_board.h  (+2 more)
src/install/robif2b/share/robif2b/: package.bash  package.dsv  package.ps1  package.sh
src/log/: latest_build
(+24 files in other folders)
