<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_place_fsm</name>
  <version>0.0.1</version>
  <description>Pick-and-place FSM client + mock servers for Eddie arms</description>
  <maintainer email="vamsikalagaturu@gmail.com">Vamsi Kalagaturu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>eddie_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>